# distributed_systems_lab_tasks

./: README.md
0_zad_fib_nbrs/dslab01/: solution.rs
10_zad_leader_election/: dslab10.tgz
10_zad_leader_election/dslab10/: solution.rs
12_zad_eventual_consistency/dslab12/: Cargo.toml  public_test.rs  solution.rs
14_zad_hashing_based_data_distribution/dslab14/: Cargo.toml  domain.rs  main.rs  public_test.rs  solution.rs
1_duze_zad_exec_system/dsassignment1/solution/: lib.rs
1_zad_concurrency/dslab02/: solution.rs
1_zad_concurrency/dslab02/examples/: box_rc.rs  closures.rs  threads.rs
2_duze_zadanie_atomic_disk_drive/dsassignment2/public-tests/: Cargo.toml
2_zad_concurrency/dslab02/: main.rs  solution.rs
2_zad_concurrency/dslab02/examples/: drop.rs
2_zad_concurrency/dslab02/kl429678/: solution.rs
2_zad_executor_system/dslab03/: solution.rs
2_zad_executor_system/dslab03/kl429678/: solution.rs
3_duze_zadanie_RAFT/dsassignment3/public-tests/: Cargo.toml
3_duze_zadanie_RAFT/dsassignment3/test-utils/: Cargo.toml  lib.rs
3_duze_zadanie_RAFT/raft_election/: Cargo.toml  main.rs  raft_election.rs
3_zad_executor_system/dslab03/: public_test.rs
4_zad_secure_networking/dslab05/: solution.rs
4_zad_tokio/examples/: futures.rs
5_zad_stable_storage/dslab06/: main.rs  public_test.rs  solution.rs
6_zad_stable_storage/dslab06/: README.md  public_test.rs  solution.rs
7_zad_health_checks/dslab08/: main.rs
7_zad_serde/dslab07/: Cargo.toml
8_zad_health_checks/dslab08/: Cargo.toml
9_zad_distributed_commit/: dslab09.tgz
(+72 files in other folders)
