[package]
name = "lab-14"
version = "0.2.1"
edition = "2024"

[dependencies]
log = "0.4"
env_logger = "0.11"
async-trait = "0.1"
tokio = { version = "1.48", features = ["full"] }
module_system = { path = "../module_system/", package = "assignment-1-solution" }

[dev-dependencies]
ntest = "0.9"

[[bin]]
name = "lab14"
path = "main.rs"

[lints.rust]
unsafe_code = "forbid"
